styles/main.css
@font-face {
  font-family: 'Inter var';
  font-style: normal;
  font-weight: 100 900;
  font-display: block;
  src: url(/fonts/Inter-roman.latin.var.woff2) format('woff2');
}
@font-face {
  font-family: 'Inter var';
  font-style: italic;
  font-weight: 100 900;
  font-display: block;
  src: url(/fonts/Inter-italic.latin.var.woff2) format('woff2');
  font-named-instance: 'Italic';
}
@font-face {
  font-family: 'Space Grotesk';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(/fonts/space-grotesk.latin.var.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
    U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
    U+FEFF, U+FFFD;
}

body[data-theme='dark'] {
  --colors-secondary: #c25b84;
  --colors-accent: #7670db;
  --colors-accent-background: #150044;
  --colors-text: var(--colors-white);
  --colors-background: #170440;
  --colors-inline-code: #4842b3;
}

body[data-theme='light'] {
  --colors-secondary: #b34270;
  --colors-accent: #432a79;
  --colors-accent-background: #ebe2ff;
  --colors-text: var(--colors-black);
  --colors-background: #e9f1f7;
  --colors-inline-code: #cae8ff;
}

*::selection {
  color: white;
  background-color: var(--colors-selection);
}

body {
  /* constants */
  /* colors */
  --colors-white: white;
  --colors-black: black;
  --colors-selection: #3297fd;
  --colors-purple: #432a79;
  --colors-purple-background: #ebe2ff;

  /* font-sizes */
  --font-sizes-xs: 0.75rem;
  --font-sizes-sm: 0.875rem;
  --font-sizes-md: 1rem;
  --font-sizes-lg: 2rem;
  /* font-weights */
  --font-weights-semibold: 'wght' 600;
  --font-weights-bold: 'wght' 850;
  /* spacing */
  --spaces-xs: 0.25rem;
  --spaces-sm: 0.5rem;
  --spaces-md: 1rem;
  --spaces-lg: 2rem;
  --spaces-xl: 3rem;

  color: var(--colors-text);
  background-color: var(--colors-background);

  padding-left: 1rem;
  padding-right: 1rem;

  font-family: 'Inter var', system-ui, -apple-system, BlinkMacSystemFont,
    'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
  -webkit-font-smoothing: subpixel-antialiased;
  font-feature-settings: 'case' 1, 'cpsp' 1, 'dlig' 1, 'cv01' 1, 'cv02',
    'cv03' 1, 'cv04' 1;
  font-variation-settings: 'wght' 450;
  font-variant: common-ligatures contextual;
  letter-spacing: -0.02em;
}
b,
strong {
  font-variation-settings: 'wght' 650;
}
h1 {
  font-variation-settings: 'wght' 850;
}
h2 {
  font-variation-settings: 'wght' 750;
  font-size: 1.6rem;
}
h3 {
  font-size: 1.3rem;
  font-variation-settings: 'wght' 650;
}
h4 {
  font-size: 1.2rem;
  font-variation-settings: 'wght' 650;
}
h5 {
  font-size: 1.1rem;
  font-variation-settings: 'wght' 650;
}
h6 {
  font-size: 1rem;
  font-variation-settings: 'wght' 650;
}

@media screen and (min-device-pixel-ratio: 1.5),
  screen and (min-resolution: 1.5dppx) {
  body {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
  }
}

details summary {
  cursor: pointer;
}

img.next-image {
  margin: 0;
}

